# Nexus

./: Cargo.toml  LICENSE  README.md  default_config.toml
.github/scripts/: generate_aur_files.sh
.github/workflows/: aur-update.yml
src/: app.rs  auth.rs  config.rs  error.rs  event.rs  main.rs
src/animation/: mod.rs  spinner.rs  transitions.rs
src/network/: dbus_proxies.rs  manager.rs  mod.rs  signals.rs  stats.rs  types.rs  wifi.rs
src/ui/: details.rs  header.rs  help.rs  hidden.rs  mod.rs  network_list.rs  password.rs  status_bar.rs  theme.rs
src/ui/components/: confirm_dialog.rs  input_dialog.rs  mod.rs  status_bar.rs  tabs.rs
src/ui/pages/: connections.rs  dashboard.rs  diagnostics.rs  interfaces.rs  mod.rs  wifi.rs
