[package]
name = "nexus-nm"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Swastik Patel"]
description = "A modern TUI-based network manager for Arch Linux"
license = "MIT"
repository = "https://github.com/swastikpatel/nexus-nm"
keywords = ["tui", "network", "networkmanager", "arch-linux", "wifi"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
# TUI
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }

# Async runtime
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "sync",
    "signal",
    "io-util",
    "process",
    "fs",
] }
futures = "0.3"

# D-Bus (pure Rust — no libdbus C dependency)
zbus = { version = "4", default-features = false, features = ["tokio"] }

# Networking
ipnet = "2"
dns-lookup = "2"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
color-eyre = "0.6"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
unicode-width = "0.2"
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "z"
panic = "abort"
