[package]
name = "nexus"
version = "1.0.0"
edition = "2024"
authors = ["Swastik Patel"]
description = "A beautiful modern TUI WiFi manager for Arch Linux"
license = "MIT"
repository = "https://github.com/CPT-Dawn/Nexus"
keywords = ["wifi", "tui", "networkmanager", "arch-linux"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
# TUI framework
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }

# Async runtime
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "process",
] }
futures = "0.3"

# D-Bus for NetworkManager
zbus = { version = "5", default-features = false, features = ["tokio"] }

# Error handling & diagnostics
color-eyre = "0.6"
eyre = "0.6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
unicode-width = "0.2"
serde = { version = "1", features = ["derive"] }
dirs = "6"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
